# mlops_course

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  triton_report.md
.dvc/: config
conf/: config.yaml
data/: .files.dvc
mlops_course/: Dockerfile  commands.py  config.py  infer.py  mnist_solver.onnx  train.py
mlops_course/config/: __init__.py
mlops_course/data/: __init__.py
mlops_course/model_repository/onnx-mnist/: config.pbtxt
mlops_course/model_repository/onnx-mnist/1/: model.onnx.dvc
mlops_course/trainer/: mnist_solver.py
mlops_course/triton/: triton_client.py
