[tool.poetry]
name = "mlops-course"
version = "0.1.0"
description = "mnist classification"
authors = ["anatoly <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"
torchvision = "^0.15.2"
pandas = "^2.0.0"
hydra = "^2.5"
fire = "^0.5.0"
hydra-core = "^1.3.2"
dvc = "^3.27.0"
dvc-gdrive = "^2.20.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[tool.black]
line-length = 90
target-version = ["py37"]
skip-string-normalization = true

[tool.isort]
src_paths = ["mlops_course"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 90
lines_after_imports = 2


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
